force-app/main/default/objects/User__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <label>First_Name</label>
    <length>48</length>
    <type>Text</type>
</CustomField>