force-app/main/default/objects/User__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <label>User_Id</label>
    <type>AutoNumber</type>
</CustomField>